--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <img src="./src/logo.svg" alt="Logo" class="header__logo">
+        <button class="btn">LOGIN</button>
+    </header>
 </body>
 </html>
