added media queries

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</p>
 			</div>
 
-			<div class="block">
+			<div class="block block3">
 				<div class="block__title">
 					Адаптив. <br />
 					Медиазапросы
@@ -51,7 +51,7 @@
 				<p class="block__description">
 					Сделаем наше приложение адаптивным, чтобы оно так же хорошо выглядело
 					на планшетах и мобильных телефонах. Рассмотрим как работает св-во
-					flex-wrap. Научимся делать адаптив, используя м едиазапросы.
+					flex-wrap. Научимся делать адаптив, используя медиазапросы.
 				</p>
 			</div>
 		</main>
